--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
                 
            </div>
         </div>
-        
         <div class="time" id="midday">
             <div id="hoopoe"></div>
             <div id="woody"></div>
@@ -49,25 +48,25 @@
         </div>
         <div class="black" id="eveningbanner">
            <div class="content">
-               <h2>Header</h2>
-                <p>FACT</p>
+              <p>However, in 2018, over</p>
+               <h2>40%</h2>
+                <p>of Sub-Saharan Africans live in urban environments.</p>
            </div>
         </div>
         <div class="time" id="evening">
             <div>one</div>
             <div>two</div>
-            <div>three</div>
+            <div id="devs"></div>
         </div>
         <div class="black" id="nightbanner">
            <div class="content">
-               <h2>Header</h2>
-                <p>FACT</p>
+
            </div>
         </div>
         <div class="time" id="night">
             <div>one</div>
             <div>two</div>
-            <div>three</div>
+            <div></div>
         </div>
         <div class="footie">
             <footer>
